# powerd

./: Cargo.toml  co.tauos.powerd.gschema.xml  powerd.spec
.github/workflows/: package.yaml
src/: main.rs  power_profiles.rs
